--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="uiMode"/>
 
-        <activity android:name=".SplashScreenActivity"
-                android:screenOrientation="portrait"
-                android:configChanges="uiMode">
+        <activity android:name=".activities.SplashScreenActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="uiMode">
             <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
-            </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
